# Mesh_Viewer

./: CMakeLists.txt  README.md
hoge/: CMakeLists.txt  hoge.txt  main.cpp
src/: Application.cpp  Application.h  CMakeLists.txt  Dx12Wrapper.cpp  Dx12Wrapper.h  io.cpp  io.h  main.cpp  mesh.cpp  mesh.h  renderer.cpp  renderer.h
src/Shader/: CMakeLists.txt  Pixelshader.hlsl  ShaderHeader.hlsli  VertexShader.hlsl
